--- a/app/gps_alarm/src/main/AndroidManifest.xml
+++ b/app/gps_alarm/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="gps_alarm" android:host="gps_alarm" />
+            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
