--- a/app/gps_alarm/src/main/AndroidManifest.xml
+++ b/app/gps_alarm/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name="com.gps_alarm.GpsAlarmApplication"
@@ -13,8 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GpsAlarm.Splash"
+        android:theme="@style/Theme.BoWoon"
         android:usesCleartextTraffic="true">
+        <!--        android:theme="@style/Theme.GpsAlarm.Splash"-->
         <activity
             android:name="com.gps_alarm.ui.activities.GpsAlarmActivity"
             android:exported="true"
