--- a/app/rss_reader/src/main/AndroidManifest.xml
+++ b/app/rss_reader/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity
             android:name=".activities.SearchActivity"
             android:exported="false" />
+        <activity
+            android:name=".activities.ArticleDetailActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
