[gpsAlarm] WorkManager를 사용하여 Foreground Service 로 변경

--- a/app/gps_alarm/src/main/AndroidManifest.xml
+++ b/app/gps_alarm/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:name="com.gps_alarm.GpsAlarmApplication"
@@ -40,6 +43,30 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <!-- If you want to disable android.startup completely. -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove" />
+
+    <!--        <provider-->
+    <!--            android:name="androidx.startup.InitializationProvider"-->
+    <!--            android:authorities="${applicationId}.androidx-startup"-->
+    <!--            android:exported="false"-->
+    <!--            tools:node="merge">-->
+    <!--            &lt;!&ndash; If you are using androidx.startup to initialize other components &ndash;&gt;-->
+    <!--            <meta-data-->
+    <!--                android:name="androidx.work.WorkManagerInitializer"-->
+    <!--                android:value="androidx.startup"-->
+    <!--                tools:node="remove" />-->
+    <!--        </provider>-->
+
+        <service
+            android:name="androidx.work.impl.foreground.SystemForegroundService"
+            android:exported="false"
+            android:foregroundServiceType="location"
+            tools:node="merge" />
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
