--- a/app/gps_alarm/src/main/AndroidManifest.xml
+++ b/app/gps_alarm/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -44,29 +43,16 @@
                 android:value="" />
         </activity>
 
-        <!-- If you want to disable android.startup completely. -->
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="${applicationId}.androidx-startup"
-            tools:node="remove" />
-
-    <!--        <provider-->
-    <!--            android:name="androidx.startup.InitializationProvider"-->
-    <!--            android:authorities="${applicationId}.androidx-startup"-->
-    <!--            android:exported="false"-->
-    <!--            tools:node="merge">-->
-    <!--            &lt;!&ndash; If you are using androidx.startup to initialize other components &ndash;&gt;-->
-    <!--            <meta-data-->
-    <!--                android:name="androidx.work.WorkManagerInitializer"-->
-    <!--                android:value="androidx.startup"-->
-    <!--                tools:node="remove" />-->
-    <!--        </provider>-->
-
         <service
-            android:name="androidx.work.impl.foreground.SystemForegroundService"
+            android:name="com.gps_alarm.service.GpsAlarmService"
             android:exported="false"
-            android:foregroundServiceType="location"
-            tools:node="merge" />
+            android:foregroundServiceType="location" />
+
+        <!--        <service-->
+        <!--            android:name="androidx.work.impl.foreground.SystemForegroundService"-->
+        <!--            android:exported="false"-->
+        <!--            android:foregroundServiceType="location"-->
+        <!--            tools:node="merge" />-->
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
