--- a/app/rss_reader/src/main/AndroidManifest.xml
+++ b/app/rss_reader/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".RssReaderApplication"
+        android:name="com.rss_reader.RssReaderApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.BoWoon"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.rss_reader.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +21,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.SearchActivity"
+            android:name="com.rss_reader.activities.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.ArticleDetailActivity"
+            android:name="com.rss_reader.activities.ArticleDetailActivity"
             android:exported="false" />
     </application>
 
