--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ jetpack-paging = "3.1.1"
 jetpack-room = "2.5.0"
 jetpack-work-manager = "2.8.1"
 jetpack-splash = "1.0.0"
+jetpack-startup = "1.1.1"
 constraint-layout = "2.1.4"
 retrofit2 = "2.9.0"
 okhttp-okHttp = "4.10.0"
@@ -86,6 +87,7 @@ jetpack-room-compiler = { module = "androidx.room:room-compiler", version.ref = 
 jetpack-work-manager = { module = "androidx.work:work-runtime-ktx", version.ref = "jetpack-work-manager" }
 jetpack-room-paging = { module = "androidx.room:room-paging", version.ref = "jetpack-room" }
 jetpack-splash = { module = "androidx.core:core-splashscreen", version.ref = "jetpack-splash" }
+jetpack-startup = { module = "androidx.startup:startup-runtime", version.ref = "jetpack-startup" }
 constraint-layout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraint-layout" }
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2" }
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp-okHttp" }
