--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 kotlin = "1.8.20"
-android-gradle = "8.0.2"
+android-gradle = "8.1.1"
 android-plugin = "1.6.0"
-google-material = "1.6.1"
-google-location = "20.0.0"
+google-material = "1.9.0"
+google-location = "21.0.1"
 firebase-google-service = "4.3.15"
-firebase-gradle = "3.4.0"
+firebase-gradle = "3.4.3"
 firebase-crashlytics-plugin = "2.9.6"
 firebase-performance-plugin = "1.4.2"
-firebase-bom = "32.1.1"
+firebase-bom = "32.2.3"
 jetpack-core = "1.10.1"
 jetpack-appcompat = "1.6.1"
 jetpack-lifecycle = "2.6.1"
 jetpack-activity = "1.7.2"
-jetpack-fragment = "1.5.7"
-jetpack-navigation = "2.5.3"
-jetpack-navigation-safeArgs = "2.5.1"
+jetpack-fragment = "1.6.1"
+jetpack-navigation = "2.7.1"
+jetpack-navigation-safeArgs = "2.7.1"
 jetpack-datastore = "1.0.0"
-jetpack-paging = "3.1.1"
-jetpack-room = "2.5.0"
+jetpack-paging = "3.2.0"
+jetpack-room = "2.5.2"
 jetpack-work-manager = "2.8.1"
-jetpack-splash = "1.0.0"
+jetpack-splash = "1.0.1"
 jetpack-startup = "1.1.1"
 constraint-layout = "2.1.4"
 retrofit2 = "2.9.0"
 okhttp-okHttp = "4.10.0"
 okhttp-profiler = "1.0.8"
-serialization-kotlin = "1.2.0"
-serialization-converter = "0.8.0"
-glide = "4.13.0"
-hilt = "2.45"
+serialization-kotlin = "1.5.0"
+serialization-converter = "1.0.0"
+glide = "4.15.1"
+hilt = "2.46.1"
 hilt-compiler = "1.0.0"
 hilt-navigation = "1.0.0"
 hilt-work-manager = "1.0.0"
@@ -37,18 +37,18 @@ orbit = "4.6.1"
 compose-bom = "2023.01.00"
 compose-compiler = "1.4.5"
 compose-compose = "1.4.3"
-compose-activity = "1.5.1"
-compose-view-model = "2.5.1"
+compose-activity = "1.7.2"
+compose-view-model = "2.6.1"
 compose-navigation = "2.5.3"
 compose-hilt-navigation = "1.0.0"
-compose-paging = "1.0.0-alpha17"
+compose-paging = "3.2.0"
 compose-view-binding = "1.3.0"
 compose-icon-extended = "1.3.1"
 compose-lottie = "5.2.0"
 compose-material3-window-size = "1.1.1"
 accompanist-webview = "0.28.0"
 accompanist-pullToRefresh = "0.28.0"
-coroutine-core = "1.6.4"
+coroutine-core = "1.7.3"
 naver-map = "3.15.0"
 threetenabp-core = "1.4.0"
 tikxml-core = "0.8.13"
