[GpsAlarm] orbit 제거

--- a/app/gps_alarm/src/main/AndroidManifest.xml
+++ b/app/gps_alarm/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
                 android:value="" />
         </activity>
 
+        <activity
+            android:name="com.bowoon.gps_alarm.webview.AddressWebViewActivity"
+            android:exported="false" />
+
         <service
             android:name="com.bowoon.gps_alarm.service.GpsAlarmService"
             android:exported="false"
